# ndi-over-webrtc-streamer

./: .gitignore  CMakeLists.txt  README.md  automate.cmake  libdatachannel_builder.cmd
BuildTools/: libsrtp_CMakeLists.txt  usrsctp_CMakeLists.txt
app/src/: CMakeLists-armhf.txt  CMakeLists.txt  fileparser.cpp  fileparser.hpp  h264fileparser.cpp  h264fileparser.hpp  main.cpp  stream.cpp
